--- a/login.css
+++ b/login.css
@@ -13,6 +13,12 @@ body {
   }
 @media only screen and (max-width: 414px) {
     body {
+        font-family: Arial, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
         background: url(clouds.gif) no-repeat center center fixed;
         background-size: cover;
     }
