--- a/login.css
+++ b/login.css
@@ -14,13 +14,16 @@ body {
 @media only screen and (max-width: 414px) {
     body {
         font-family: Arial, sans-serif;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
         background: url(clouds.gif) no-repeat center center fixed;
         background-size: cover;
+    }
+    .form-group label {
+        font-size: 14px; /* Add a value here */
     }
 }
   .content {
